--- a/trunk/asset/default/css/ad_style_front.css
+++ b/trunk/asset/default/css/ad_style_front.css
@@ -457,3 +457,6 @@ width: 92px;
 table.left tr td{
 	text-align:left;
 }
+.left{text-align:left;}
+.center{text-align:center;}
+.right{text-align:right;}
