--- a/asset/default/css/ad_style_front.css
+++ b/asset/default/css/ad_style_front.css
@@ -495,10 +495,11 @@ form#simpanbiodata table tr td input{width:200px;}
 		text-transform:uppercase;
 		font-weight:bold;
 	}
-	table.penghubungortutk tr.sub_2 td {
+	table.penghubungortutk tr.aspek td {
 		Background-color:#e8e8e8;
 		font-weight:bold;
 	}
+
 	table.penghubungortutk tr td.nilai {
 		text-align:center;
 	}
